--- a/my_course_app/pubspec.yaml
+++ b/my_course_app/pubspec.yaml
@@ -33,8 +33,16 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   cupertino_icons: ^1.0.8
-  # crypto package used by `lib/authenticator.dart` for sha256 hashing
-  crypto: ^3.0.2
+  
+  # BCrypt for secure password hashing
+  bcrypt: ^1.1.3
+  
+  # Path provider for file system access (mobile/desktop)
+  path_provider: ^2.1.1
+  
+  # Shared preferences for web storage
+  shared_preferences: ^2.2.2
+  
   # Provider for state management (MVVM pattern)
   provider: ^6.1.1
 
