--- a/my_course_app/pubspec.yaml
+++ b/my_course_app/pubspec.yaml
@@ -57,6 +57,9 @@ dev_dependencies:
   build_runner: ^2.7.1
   riverpod_generator: ^3.0.3
 
+  # Google Fonts for better typography
+  google_fonts: ^6.2.1
+
 # Flutter-specific settings
 flutter:
   uses-material-design: true
